examples/test/testpolicy5292.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5292
  namespace: namespace163
spec:
  podSelector:
    matchLabels:
      key48: value19
      key42: value23
      key33: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value13
      podSelector:
        matchLabels:
          key35: value38
